Set all routes in routes/pages & routes.index.js

--- a/server/views/partials/nav-pages.ejs
+++ b/server/views/partials/nav-pages.ejs
@@ -1,6 +1,6 @@
 <nav>
     <div class="leftNav">
-        <a href="/" class="brand">
+        <a href="/home" class="brand">
             <img src="../images/chef-hat-png-1.png" alt="Recipes" class="logo">
             <h1>Recipes</h1>
         </a>
