--- a/server/views/partials/nav-pages.ejs
+++ b/server/views/partials/nav-pages.ejs
@@ -9,8 +9,15 @@
             <li><a href="/about"><i class="fa-solid fa-circle-info"></i>&nbsp;<b>About</b></a></li>
             <li><a href="/favorites"><i class="fa-solid fa-heart"></i>&nbsp;<b>Our Favorites</b></a></li>
             <li><a href="/contact"><i class="fa-solid fa-inbox"></i>&nbsp;<b>Contact</b></a></li>
+            <li><a href="/playground/userlist"><i class="fa-solid fa-address-book"></i><b>User List</b></a></li>
+            <% if(locals.user) {%>
+                <li><a href="/auth/logout"><i class="fa fa-sign-out"></i><b>Logout <%=user.username%></b></a></li>
+            <%} else {%>
+                <li><a href="/auth/login"><i class="fa-solid fa-user"><b>Login</b></i></a></li>
+            <%}%>
         </ul>
     </div>
+
     <div class="search">
         <form action="/search" method="GET">
             <input type="text" id="searchInput" class="input" name="query" placeholder="Search..." required>
@@ -27,5 +34,11 @@
             <li><a href="/about"><i class="fa-solid fa-circle-info"></i>&nbsp;<b>About</b></a></li>
             <li><a href="/favorites"><i class="fa-solid fa-heart"></i>&nbsp;<b>Our Favorites</b></a></li>
             <li><a href="/contact"><i class="fa-solid fa-inbox"></i>&nbsp;<b>Contact</b></a></li>
+            <li><a href="/playground/userlist"><i class="fa fa-address-book"><b>User List</b></i></a></li>
+            <% if(locals.user) {%>
+            <li><a href="/auth/logout"><i class="fa fa-sign-out"></i><b>Logout <%=user.username%></b></a></li>
+            <%} else {%>
+                <li><a href="/auth/login"><i class="fa-solid fa-user"><b>Login</b></i></a></li>
+            <%}%>
         </ul>
 </div>
