--- a/server/views/myaccount.ejs
+++ b/server/views/myaccount.ejs
@@ -1,4 +1,5 @@
-<%- include('./partials/header'); -%>
+<%- include('./partials/header-pages'); -%>
+<%- include('./partials/nav-pages'); -%>
   <main>
     <div class="container">
       <%- include('./partials/messages');%>
@@ -22,4 +23,4 @@
         </div>
     </div>
   </main>
-  <%- include('./partials/footer'); -%>
+  <%- include('./partials/footer-pages'); -%>
