--- a/server/views/partials/nav-pages.ejs
+++ b/server/views/partials/nav-pages.ejs
@@ -11,7 +11,8 @@
             <li><a href="/contact"><i class="fa-solid fa-inbox"></i>&nbsp;<b>Contact</b></a></li>
             <li><a href="/playground/userlist"><i class="fa-solid fa-address-book"></i><b>User List</b></a></li>
             <% if(locals.user) {%>
-                <li><a href="/auth/logout"><i class="fa fa-sign-out"></i><b>Logout <%=user.username%></b></a></li>
+                <li><a href="/auth/logout"><i class="fa-solid fa-sign-out"></i><b>Logout <%=user.username%></b></a></li>
+                <li><a href="/myaccount"><i class="fa-solid fa-tasks"></i><b>My Account</b></a></li>
             <%} else {%>
                 <li><a href="/auth/login"><i class="fa-solid fa-user"><b>Login</b></i></a></li>
             <%}%>
