--- a/server/views/pages/contact-pages.ejs
+++ b/server/views/pages/contact-pages.ejs
@@ -6,7 +6,7 @@
     <div class="contact-container">
         <form action="#" method="post" id="contactForm" class="contact-left">
             <div class="contact-left-title">
-                <h2>Contact Us</h2>
+                <h2>contact</h2>
                 <hr>
             </div>
 
