--- a/server/views/auth/registration.ejs
+++ b/server/views/auth/registration.ejs
@@ -1,70 +1,55 @@
 <%- include('../partials/header-pages'); -%>
 <%- include('../partials/nav-pages'); -%>
-  <main>
-    <div class="main">
-      <div class="container">
-        <%- include('../partials/messages');%>
-          <div class="card bg-light" id="signup">
-            <article class="card-body mx-auto">
-              <h4 class="card-title mt-3 text-center">Registration</h4>
-              <p class="text-center">Please create an account using the form below!</p>
+<div class="main">
+  <div class="login-container">
+      <form action="/auth/register" method="post" autocomplete="off" id="loginForm" class="login-left">
+          <div class="login-left-title">
+              <h2>Registration</h2>
+              <hr>
+          </div>
 
-              <form action="/auth/register" autocomplete="off" method="POST">
-                <div class="form-group input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
-                  </div>
-                  <input name="username"
-                    class="form-control <%=locals.errors && errors.includes('username') ? 'is-invalid' : ''%>"
-                    placeholder="Username (min 6 characters)" type="text"
+          <label for="username">Username:</label>
+          <input name="username"
+                    class="login-inputs form-control <%=locals.errors && errors.includes('username') ? 'is-invalid' : ''%>"
+                    placeholder="Username (min 6 characters)" id="username" type="text"
                     value="<%=locals.data && data.username ? data.username : '' %>">
-                </div> <!-- form-group// -->
-                <div class="form-group input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
-                  </div>
-                  <input name="email"
-                    class="form-control <%=locals.errors && errors.includes('email') ? 'is-invalid' : ''%>"
-                    placeholder="Email address" value="<%=locals.data && data.email ? data.email : '' %>">
-                </div> <!-- form-group// -->
 
-                <div class="form-group input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-                  </div>
-                  <input class="form-control <%=locals.errors && errors.includes('password') ? 'is-invalid' : ''%>"
-                    name="password" placeholder="Create password (min 8 characters)" type="password"
+          <label for="email">Email Address:</label>
+          <input name="email"
+                    id="email"
+                    class="login-inputs form-control <%=locals.errors && errors.includes('email') ? 'is-invalid' : ''%>"
+                    placeholder="Email address" value="<%=locals.data && data.email ? data.email : '' %>">
+
+          <label for="password">Password:</label>
+          <input class="login-inputs form-control <%=locals.errors && errors.includes('password') ? 'is-invalid' : ''%>"
+                    name="password" id="password" placeholder="Create password (min 8 characters)" type="password"
                     autocomplete="new-password" value="<%=locals.data && data.password ? data.password : '' %>">
-                </div> <!-- form-group// -->
-                <div class="form-group input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-                  </div>
-                  <input class="form-control <%=locals.errors && errors.includes('password') ? 'is-invalid' : ''%>"
+
+          <label for="password">Confirm Password:</label>
+          <input class="login-inputs form-control <%=locals.errors && errors.includes('password') ? 'is-invalid' : ''%>"
                     name="confirmPassword" placeholder="Confirm password" type="password"
                     value="<%=locals.data && data.confirmPassword ? data.confirmPassword : '' %>">
-                </div> <!-- form-group// -->
-                <div class="form-group">
-                  <button type="submit" class="btn btn-primary btn-block"> Create Account </button>
-                </div> <!-- form-group// -->
-                <p class="divider-text">
-                  <span class="bg-light">OR</span>
-                </p>
-                <p>
-                  <a href="/auth/github" class="btn btn-block btn-social btn-github"> <i class="fab fa-github"></i> Sign
-                    up
-                    using GitHub</a>
-                </p>
-                <p class="divider-text">
-                  <span class="bg-light">Do you have an account already?</span>
-                </p>
-                <p class="text-center">
-                  <a class="btn btn-block btn-secondary" href="/auth/login">Log In</a>
-                </p>
-              </form>
-            </article>
+
+          <div class="button-container">
+              <button class="button" type="submit">Submit</button>
           </div>
+
+          <div class="login">
+            <span class="bg-light">You have an account already?</span>
+            <p class="text-center">
+              <a class="btn btn-block btn-secondary" href="/auth/login">Login</a>
+            </p>
+          </div>
+
+      </form>
+      <div class="login-right">
+          <img src="../images/pasta.jpg" alt="">
       </div>
-    </div>
-  </main>
+  </div>
+
+
+
+</div>
+</div>
+
   <%- include('../partials/footer-pages'); -%>
