CRUD|bookList and small frontend changes

--- a/server/views/auth/myaccount.ejs
+++ b/server/views/auth/myaccount.ejs
@@ -1,8 +1,8 @@
-<%- include('./partials/header-pages'); -%>
-<%- include('./partials/nav-pages'); -%>
+<%- include('../partials/header-pages'); -%>
+<%- include('../partials/nav-pages'); -%>
   <main>
     <div class="container">
-      <%- include('./partials/messages');%>
+      <%- include('../partials/messages');%>
 
         <div class="card bg-light" id="signup">
           <article class="card-body mx-auto">
@@ -16,6 +16,10 @@
                             alt="<%= user.favorites[i].bookTitle %>">
                         <p>Title: <%= user.favorites[i].bookTitle%></p>
                         <p>Author: <%= user.favorites[i].bookAuthor%></p>
+                        <form action="/api/removeBook/" method="POST" enctype="application/x-www-form-urlencoded">
+                          <input type="hidden" name="bookISBN" value="<%= user.favorites[i].bookISBN %>">
+                          <button type="submit">Remove From Favorites</button>
+                        </form>
                     </li>
                 <% } %>
             <% } %>
@@ -25,4 +29,9 @@
         </div>
     </div>
   </main>
-  <%- include('./partials/footer-pages'); -%>
+  <%- include('../partials/footer-pages'); -%>
+  <script src="../javascripts/searchBar.js" async defer></script>
+<!--<script src="../javascripts/contact.js" async defer></script>-->
+<script src="../javascripts/ripple.js" async defer></script>
+</body>
+</html>
