--- a/server/views/partials/nav-pages.ejs
+++ b/server/views/partials/nav-pages.ejs
@@ -31,7 +31,7 @@
 <div class="page">
     <div class="menu">
         <ul>
-            <li><a href="/"><i class="fa-solid fa-house"></i>&nbsp;<b>Home</b></a></li>
+            <li><a href="/home"><i class="fa-solid fa-house"></i>&nbsp;<b>Home</b></a></li>
             <li><a href="/about"><i class="fa-solid fa-circle-info"></i>&nbsp;<b>About</b></a></li>
             <li><a href="/favorites"><i class="fa-solid fa-heart"></i>&nbsp;<b>Our Favorites</b></a></li>
             <li><a href="/contact"><i class="fa-solid fa-inbox"></i>&nbsp;<b>Contact</b></a></li>
