--- a/server/views/auth/myaccount.ejs
+++ b/server/views/auth/myaccount.ejs
@@ -16,7 +16,7 @@
                             alt="<%= user.favorites[i].bookTitle %>">
                         <p>Title: <%= user.favorites[i].bookTitle%></p>
                         <p>Author: <%= user.favorites[i].bookAuthor%></p>
-                        <form action="/api/removeBook/" method="POST" enctype="application/x-www-form-urlencoded">
+                        <form action="/api/user/remove-from-favorites" method="POST" enctype="application/x-www-form-urlencoded">
                           <input type="hidden" name="bookISBN" value="<%= user.favorites[i].bookISBN %>">
                           <button type="submit">Remove From Favorites</button>
                         </form>
