Add eventListener to favorites button to prevent page reload

--- a/server/views/pages/search-pages.ejs
+++ b/server/views/pages/search-pages.ejs
@@ -47,12 +47,12 @@
                                             <td><%= books[i].bookISBN %></td>
                                         </tr>
                                     </table>
-                                    <form action="/api/user/add-to-favorites" method="POST" enctype="application/x-www-form-urlencoded">
+                                    <form action="/api/user/add-to-favorites" method="POST">
                                         <input type="hidden" name="bookTitle" value="<%= books[i].bookTitle %>">
                                         <input type="hidden" name="bookAuthor" value="<%= books[i].bookAuthor %>">
                                         <input type="hidden" name="bookISBN" value="<%= books[i].bookISBN %>">
                                         <input type="hidden" name="bookThumbnail" value="<%= books[i].bookThumbnail %>">
-                                        <button type="submit">Add to Favorites</button>
+                                        <button type="button" class="btn add-to-favorites">Add to Favorites</button>
                                     </form>
                                 </div>
                             </div>
@@ -67,5 +67,6 @@
 <%- include('../partials/footer-pages') %>
 
 <script src="../javascripts/searchBar.js" async defer></script>
+<script src="../javascripts/addToFavorites.js" async defer></script>
 </body>
 </html>
