Generalize add/remove favorites function into favoriteButtons.js

--- a/server/views/pages/search-pages.ejs
+++ b/server/views/pages/search-pages.ejs
@@ -52,7 +52,7 @@
                                         <input type="hidden" name="bookAuthor" value="<%= books[i].bookAuthor %>">
                                         <input type="hidden" name="bookISBN" value="<%= books[i].bookISBN %>">
                                         <input type="hidden" name="bookThumbnail" value="<%= books[i].bookThumbnail %>">
-                                        <button type="button" class="btn add-to-favorites">Add to Favorites</button>
+                                        <button type="button" class="btn favorites">Add to Favorites</button>
                                     </form>
                                 </div>
                             </div>
@@ -67,6 +67,6 @@
 <%- include('../partials/footer-pages') %>
 
 <script src="../javascripts/searchBar.js" async defer></script>
-<script src="../javascripts/addToFavorites.js" async defer></script>
+<script src="../javascripts/favoriteButtons.js" async defer></script>
 </body>
 </html>
