--- a/server/views/auth/myaccount.ejs
+++ b/server/views/auth/myaccount.ejs
@@ -18,7 +18,7 @@
                         <p>Author: <%= user.favorites[i].bookAuthor%></p>
                         <form action="/api/user/remove-from-favorites" method="POST" enctype="application/x-www-form-urlencoded">
                           <input type="hidden" name="bookISBN" value="<%= user.favorites[i].bookISBN %>">
-                          <button type="submit">Remove From Favorites</button>
+                          <button type="submit" class="btn favorites">Remove From Favorites</button>
                         </form>
                     </li>
                 <% } %>
