--- a/server/views/auth/complete.ejs
+++ b/server/views/auth/complete.ejs
@@ -1,4 +1,5 @@
-<%- include('../partials/header'); -%>
+<%- include('../partials/header-pages'); -%>
+<%- include('../partials/nav-pages'); -%>
   <main>
     <div class="container">
       <%- include('../partials/messages');%>
@@ -34,4 +35,11 @@
         </div>
     </div>
   </main>
-  <%- include('../partials/footer'); -%>
+  <%- include('../partials/footer-pages') %>
+
+  <script src="../javascripts/searchBar.js" async defer></script>
+  <!--<script src="../javascripts/contact.js" async defer></script>-->
+  <script src="../javascripts/ripple.js" async defer></script>
+  </body>
+  </html>
+  
