--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -150,6 +150,7 @@ nav.active .leftNav .brand{
 /* --------------SideNavbar---------------------------- */
 .page{
     display: flex;
+    flex-direction: column;
     margin-top: 50px;
     width: 100%;
 }
@@ -157,6 +158,7 @@ nav.active .leftNav .brand{
 .page .menu{
     visibility: hidden;
     width: 0px;
+    height: 0px;
     transition: width 0.3s ease-in-out;
     background-color: black;
 }
@@ -205,6 +207,20 @@ hr {
     margin: 20px auto; 
 }
 
+
+.button{
+    padding: 15px 30px;
+    font-size: 16px;
+    color: #fff;
+    gap: 10px;
+    border: none;
+    border-radius: 2px;
+    background: #000000;
+    cursor: pointer;
+    margin: 5px 0;
+    overflow: hidden;
+    position: relative;
+}
 
 
 
