--- a/server/views/auth/changepassword.ejs
+++ b/server/views/auth/changepassword.ejs
@@ -1,38 +1,51 @@
-<%- include('../partials/header'); -%>
+<%- include('../partials/header-pages'); -%>
+<%- include('../partials/nav-pages'); -%>
   <main>
-    <div class="container">
+    <div class="login-container">
       <%- include('../partials/messages');%>
-        <div class="card bg-light" id="signup">
-          <article class="card-body mx-auto">
-            <h4 class="card-title mt-3 text-center">Change password</h4>
-            <p class="text-center">Please enter your new password using the form below!</p>
 
-            <form action="/auth/resetpassword/<%=userId%>/<%=resetToken%>" autocomplete="off" method="POST">
+      <div>
+        <form action="/auth/resetpassword/<%=userId%>/<%=resetToken%>" autocomplete="off" method="POST">
 
+          <h4 class="card-title mt-3 text-center">Change password</h4>
+          <p class="text-center">Please enter your new password using the form below!</p>
 
-              <div class="form-group input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-                </div>
-                <input class="form-control <%=locals.errors && errors.includes('password') ? 'is-invalid' : ''%>"
-                  name="password" placeholder="Create password (min 8 characters)" type="password"
-                  autocomplete="new-password" value="<%=locals.data && data.password ? data.password : '' %>">
-              </div> <!-- form-group// -->
-              <div class="form-group input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-                </div>
-                <input class="form-control <%=locals.errors && errors.includes('password') ? 'is-invalid' : ''%>"
-                  name="confirmPassword" placeholder="Confirm password" type="password"
-                  value="<%=locals.data && data.confirmPassword ? data.confirmPassword : '' %>">
-              </div> <!-- form-group// -->
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block"> Reset password </button>
-              </div> <!-- form-group// -->
+          <div class="form-group input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+            </div>
+            <input class="login-inputs <%=locals.errors && errors.includes('password') ? 'is-invalid' : ''%>"
+              name="password" placeholder="Create password (min 8 characters)" type="password"
+              autocomplete="new-password" value="<%=locals.data && data.password ? data.password : '' %>">
+          </div> <!-- form-group// -->
+          <div class="form-group input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+            </div>
+            <input class="login-inputs <%=locals.errors && errors.includes('password') ? 'is-invalid' : ''%>"
+              name="confirmPassword" placeholder="Confirm password" type="password"
+              value="<%=locals.data && data.confirmPassword ? data.confirmPassword : '' %>">
+          </div> <!-- form-group// -->
+        
+        <div class="form-group">
+          <button type="submit" class="button"> Reset password</button>
+        </div> <!-- form-group// -->
+      </form>
 
-            </form>
-          </article>
-        </div>
+      </div>
+      
+      <div class="login-right">
+        <img src="../images/pasta.jpg" alt="">
+      </div>
+          
     </div>
+    
   </main>
-  <%- include('../partials/footer'); -%>
+  <%- include('../partials/footer-pages') %>
+
+  <script src="../javascripts/searchBar.js" async defer></script>
+  <!--<script src="../javascripts/contact.js" async defer></script>-->
+  <script src="../javascripts/ripple.js" async defer></script>
+  </body>
+  </html>
+  
