--- a/server/views/auth/resetpassword.ejs
+++ b/server/views/auth/resetpassword.ejs
@@ -1,33 +1,44 @@
-<%- include('../partials/header'); -%>
+<%- include('../partials/header-pages'); -%>
+<%- include('../partials/nav-pages'); -%>
   <main>
-    <div class="container">
+    <div class="login-container">
       <%- include('../partials/messages');%>
 
-        <div class="card bg-light" id="signup">
-          <article class="card-body mx-auto">
-            <h4 class="card-title mt-3 text-center">Reset password</h4>
-            <p class="text-center">Please enter your email address.</p>
+      <div>
+        <form action="/auth/resetpassword" autocomplete="off" method="POST">
 
-            <form action="/auth/resetpassword" autocomplete="off" method="POST">
+        <h4 class="card-title mt-3 text-center">Reset password</h4>
+        <p class="text-center">Please enter your email address.</p>
 
+        <div class="form-group input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
+          </div>
+          <input name="email"
+            class="login-inputs <%=locals.errors && errors.includes('email') ? 'is-invalid' : ''%>"
+            placeholder="E-Mail" type="text" value="<%=locals.data && data.email ? data.email : '' %>">
+        </div> <!-- form-group// -->
 
-              <div class="form-group input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
-                </div>
-                <input name="email"
-                  class="form-control <%=locals.errors && errors.includes('email') ? 'is-invalid' : ''%>"
-                  placeholder="E-Mail" type="text" value="<%=locals.data && data.email ? data.email : '' %>">
-              </div> <!-- form-group// -->
+        <div class="form-group">
+          <button type="submit" class="button"> Reset password</button>
+        </div> <!-- form-group// -->
+      </form>
 
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block"> Reset password</button>
-              </div> <!-- form-group// -->
-
-
-            </form>
-          </article>
-        </div>
+      </div>
+      
+      <div class="login-right">
+        <img src="../images/pasta.jpg" alt="">
+      </div>
+          
     </div>
   </main>
-  <%- include('../partials/footer'); -%>
+
+
+  <%- include('../partials/footer-pages') %>
+
+  <script src="../javascripts/searchBar.js" async defer></script>
+  <!--<script src="../javascripts/contact.js" async defer></script>-->
+  <script src="../javascripts/ripple.js" async defer></script>
+  </body>
+  </html>
+  
