--- a/server/views/auth/registration.ejs
+++ b/server/views/auth/registration.ejs
@@ -7,6 +7,7 @@
               <h2>Registration</h2>
               <hr>
           </div>
+          <%- include('../partials/messages');%>
 
           <label for="username">Username:</label>
           <input name="username"
