--- a/server/views/partials/nav-pages.ejs
+++ b/server/views/partials/nav-pages.ejs
@@ -1,8 +1,7 @@
 <nav>
     <div class="leftNav">
-        <a href="/home" class="brand">
-            <img src="../images/chef-hat-png-1.png" alt="Recipes" class="logo">
-            <h1>Recipes</h1>
+        <a href="/home" class="brand"><i class="fa-solid fa-book"></i>
+            <h1>E-Book</h1>
         </a>
         <i class="fa fa-bars" id="menuButton"></i>
         <ul id="list">
