--- a/server/views/partials/header-pages.ejs
+++ b/server/views/partials/header-pages.ejs
@@ -6,6 +6,15 @@
     <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../stylesheets/style.css">
+    <!-- FAVICON -->
+    <link
+      rel="shortcut icon"
+      href="assets/img/favicon.png"
+      type="image/x-icon"
+    />
+    <!-- SWIPER CSS -->
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
+    
 
     <% if (stylesheet) {%>
         <link rel="stylesheet" href="../stylesheets/<%= stylesheet %>">
@@ -20,6 +29,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        
     <% } %>
 
 </head>
