--- a/server/views/pages/contact-pages.ejs
+++ b/server/views/pages/contact-pages.ejs
@@ -32,11 +32,13 @@
 
 </div>
 </div>
-
+<%- include('../partials/bot-pages') %>
 <%- include('../partials/footer-pages') %>
 
 <script src="../javascripts/searchBar.js" async defer></script>
 <!--<script src="../javascripts/contact.js" async defer></script>-->
 <script src="../javascripts/ripple.js" async defer></script>
+
+<script src="../javascripts/bot.js" async defer></script>
 </body>
 </html>
