--- a/server/views/pages/main-pages.ejs
+++ b/server/views/pages/main-pages.ejs
@@ -180,9 +180,10 @@
 
 </div>
 
-
+<%- include('../partials/bot-pages') %>
 <%- include('../partials/footer-pages') %>
 
+<script src="../javascripts/bot.js"></script>
 <script src="../javascripts/searchBar.js" async defer></script>
 <script src="../javascripts/scroll.js" async defer></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -191,5 +192,6 @@
 <script>
   AOS.init();
 </script>
+
 </body>
 </html>
