--- a/server/views/pages/about-pages.ejs
+++ b/server/views/pages/about-pages.ejs
@@ -19,8 +19,10 @@
     </div>
 </div>
 
+<%- include('../partials/bot-pages') %>
 <%- include('../partials/footer-pages') %>
 
 <script src="../javascripts/searchBar.js" async defer></script>
+<script src="../javascripts/bot.js" async defer></script>
 </body>
 </html>
