--- a/server/views/pages/favorites-pages.ejs
+++ b/server/views/pages/favorites-pages.ejs
@@ -51,10 +51,12 @@
 
 </div>
 
+<%- include('../partials/bot-pages') %>
 <%- include('../partials/footer-pages') %>
 
 <script src="../javascripts/searchBar.js" async defer></script>
 <script src="../javascripts/favorites.js"></script>
+<script src="../javascripts/bot.js" async defer></script>
 
 </body>
 </html>
