--- a/server/views/pages/search-pages.ejs
+++ b/server/views/pages/search-pages.ejs
@@ -64,9 +64,11 @@
     </div>
 </div>
 
+<%- include('../partials/bot-pages') %>
 <%- include('../partials/footer-pages') %>
 
 <script src="../javascripts/searchBar.js" async defer></script>
 <script src="../javascripts/favoriteButtons.js" async defer></script>
+<script src="../javascripts/bot.js" async defer></script>
 </body>
 </html>
