--- a/server/views/partials/nav-pages.ejs
+++ b/server/views/partials/nav-pages.ejs
@@ -1,8 +1,11 @@
-<nav>
+<nav id = "nav">
+    
     <div class="leftNav">
         <a href="/home" class="brand"><i class="fa-solid fa-book"></i>
             <h1>E-Book</h1>
         </a>
+
+        
         <i class="fa fa-bars" id="menuButton"></i>
         <ul id="list">
             <li><a href="/about"><i class="fa-solid fa-circle-info"></i>&nbsp;<b>About</b></a></li>
