--- a/server/views/pages/favorites-pages.ejs
+++ b/server/views/pages/favorites-pages.ejs
@@ -2,10 +2,64 @@
 
 <%- include('../partials/nav-pages') %>
 
+
+
+
 <div class="main">
 
+    <h1 class="content-card-heading">Our Favorite Books </span></h1>
+    <link rel="stylesheet" href="../stylesheets/udemyday18.css">
+    <body>
+    <div class="slider-container">
+        <div
+          class="slide active"
+          style="
+            background-image: url('https://variety.com/wp-content/uploads/2024/03/books-to-movie-adaptations.png?w=1000');
+          "
+        ></div>
+        <div
+          class="slide"
+          style="
+            background-image: url('https://static.wixstatic.com/media/9d20e6_59ceff9615b44853a06791e1db3a3ce4~mv2.jpg/v1/fill/w_640,h_334,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/9d20e6_59ceff9615b44853a06791e1db3a3ce4~mv2.jpg');
+          "
+        ></div>
+  
+        <div
+          class="slide"
+          style="
+            background-image: url('https://orion-uploads.openroadmedia.com/lg_6b2ec305689a-best-book-covers.jpg');
+          "
+        ></div>
+  
+        <div
+          class="slide"
+          style="
+            background-image: url('https://www.theyellowsparrow.com/wp-content/uploads/2016/09/creative-book-covers1-1050x421.jpg');
+          "
+        ></div>
+  
+        <div
+          class="slide"
+          style="
+            background-image: url('https://ashsinfinitelibrary.wordpress.com/wp-content/uploads/2021/08/where-the-crawdads-sing-international-editions.jpg?w=1024');
+          "
+        ></div>
+  
+        <button class="arrow left-arrow" id="left">
+          <i class="fas fa-arrow-left"></i>
+        </button>
+  
+        <button class="arrow right-arrow" id="right">
+          <i class="fas fa-arrow-right"></i>
+        </button>
+      </div>
+      </body>
+
+
+
     <!--Expanding Cards-->
-    <h1 class="content-card-heading">Our Favorite Recipes</span></h1>
+<!--
+    <h1 class="content-card-heading">Our Favorite </span></h1>
     <div class="content">
         <div class="container">
             <a class="panel" href="https://www.food.com/recipe/green-yellow-squash-linguini-w-shrimp-scampi-471158" target="_blank" style="background-image: url('https://img.sndimg.com/food/image/upload/f_auto,c_thumb,q_55,w_860,ar_3:2/v1/img/recipes/47/11/58/xcbHanqGRVuBjofzf61Y_yellow-squash-zucchini-shrimp-scampi-8114.jpg')">
@@ -25,8 +79,11 @@
             </a>
         </div>
     </div>
-    <!--Videos-->
+-->
 
+
+    <!--Videos-->
+<!--
     <section class="videos">
         <h1 class="videos-heading">Our Favorite Videos</span></h1>
         <div class="videos-wrapper">
@@ -45,6 +102,7 @@
             </div>
         </div>
     </section>
+-->
 
 </div>
 
@@ -55,6 +113,7 @@
 
 <script src="../javascripts/searchBar.js" async defer></script>
 <script src="../javascripts/favorites.js"></script>
+<script src="../javascripts/udemyday18.js" defer></script>
 
 </body>
 </html>
