--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -11,6 +11,7 @@
 
 .login-container{
     height: 95vh;
+    margin-bottom: 50px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
