--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -4,6 +4,7 @@
 
 <div class="main">
   <%- include('../partials/messages');%>
+  <div class="block">
   <div class="login-container">
       <form action="/auth/login" method="post" autocomplete="off" id="loginForm" class="login-left">
         <link rel="stylesheet" href="../stylesheets/udemyday8.css">  
@@ -41,13 +42,13 @@
           <div><a href="/auth/resetpassword">Forgot Password?</a></div>
       </form>
       <div class="login-right">
-          <img src="../images/pasta.jpg" alt="">
+          <img src="../images/auth_cover.jpeg" alt="">
       </div>
+  </div>
   </div>
 
 
 
-</div>
 </div>
 
 <%- include('../partials/footer-pages') %>
