--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -5,10 +5,15 @@ body {
     background: #fff;
 }
 .about-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
+    height: 100%;
     max-width: 50%; 
     margin: 0 auto; 
-    margin-top: -300px;
+    margin-top: -40px;
     padding: 0; 
 }
 
